Fix issue with cross domain
